# cuda-bitwise

./: CMakeLists.txt  README.md  cmake.sh  minimal-bitwise-result.txt
src/bitwise-cpp/: bitwise.txt  main.cpp  main_LATEST.cpp  main_opt_cpu_1.cpp  main_opt_cpu_2.cpp  main_opt_cpu_3.cpp  main_opt_cpu_4.cpp  main_opt_cpu_5.cpp  main_opt_cpu_5_analysis.cpp  main_unopt.cpp
src/bitwise-cuda/: cuda_helpers.cpp  cuda_helpers.h  main.cu  main_opt_cuda_refactor_prep.cpp
